tmux nvim keybinds

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -7,6 +7,17 @@ unbind C-b
 set -g prefix C-a
 bind-key C-a send-prefix
 
+# resize windows keybind
+
+bind-key -r -T prefix M-k resize-pane -U 5
+bind-key -r -T prefix M-j resize-pane -D 5
+bind-key -r -T prefix M-l resize-pane -R 5
+bind-key -r -T prefix M-h resize-pane -L 5
+bind-key -r -T prefix C-k resize-pane -U 1
+bind-key -r -T prefix C-j resize-pane -D 1
+bind-key -r -T prefix C-l resize-pane -L 1
+bind-key -r -T prefix C-h resize-pane -R 1
+
 #set -g status-position top
 
 set -g status-right-length 100
