tmux conf + submodules

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,18 @@
 [submodule "nvim"]
 	path = nvim
 	url = https://github.com/travisfriesen/kickstart.nvim
+[submodule "tmux/plugins/catppuccin"]
+	path = tmux/plugins/catppuccin
+	url = https://github.com/catppuccin/tmux
+[submodule "tmux/plugins/vim-tmux-navigator"]
+	path = tmux/plugins/vim-tmux-navigator
+	url = https://github.com/christoomey/vim-tmux-navigator
+[submodule "tmux/plugins/tmux-sensible"]
+	path = tmux/plugins/tmux-sensible
+	url = https://github.com/tmux-plugins/tmux-sensible
+[submodule "tmux/plugins/tmux-resurrect"]
+	path = tmux/plugins/tmux-resurrect
+	url = https://github.com/tmux-plugins/tmux-resurrect
+[submodule "tmux/plugins/tmux-nerd-font-window-name"]
+	path = tmux/plugins/tmux-nerd-font-window-name
+	url = https://github.com/joshmedeski/tmux-nerd-font-window-name
