--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -39,7 +39,7 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
-set -g @plugin 'catppuccin/tmux#v2.1.3'
+# set -g @plugin 'catppuccin/tmux#v2.1.3'
 set -g @plugin 'tmux-plugins/tmux-cpu'
 set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
 
@@ -95,7 +95,7 @@ set -g @catppuccin_window_current_number ""
 set -g @catppuccin_window_current_text "#[fg=#{@thm_mantle},bg=#{@thm_peach}] #I: #{pane_current_command} "
 
 
-run ~/.config/tmux/plugins/tmux/catppuccin.tmux
+run ~/.config/tmux/plugins/catppuccin/catppuccin.tmux
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.config/tmux/plugins/tpm/tpm'
